--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion "30.0.2"
 
     defaultConfig {
-        applicationId "android.example.hellotoast"
+        applicationId "android.example.jesuitas"
         minSdkVersion 15
         targetSdkVersion 30
         versionCode 1
