develop / A.1.10 final fixed

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,15 +11,10 @@
         android:theme="@style/AppTheme">
         <activity android:name=".Activity2"
             android:label = "Second Activity"
-            android:parentActivityName=".MainActivity"
-            >
+            android:parentActivityName=".MainActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value=
-                    ".MainActivity"
-
-                />
-
+                android:value=".MainActivity" />
         </activity>
         <activity android:name="android.example.codelab1_10.MainActivity">
             <intent-filter>
