--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,8 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="android.example.e22peliculas">
-
-    <uses-permission android:name="android.permission.INTERNET" />
+    package="com.example.mytodo">
 
     <application
         android:allowBackup="true"
@@ -10,11 +8,11 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.E22Peliculas">
-        <activity android:name=".AddModifyFilm"></activity>
+        android:theme="@style/Theme.MyToDo">
         <activity
             android:name=".MainActivity"
-            android:label="@string/app_name">
+            android:label="@string/app_name"
+            android:theme="@style/Theme.MyToDo.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
