--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,4 +38,12 @@ dependencies {
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+    implementation 'androidx.cardview:cardview:1.0.0'
+
+    //Room components
+    implementation'androidx.room:room-runtime:2.2.6'
+    annotationProcessor"androidx.room:room-compiler:2.2.6"
+
+
+
 }
