--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,5 +43,7 @@ dependencies {
     implementation 'androidx.cardview:cardview:1.0.0'
     compileOnly 'org.projectlombok:lombok:1.18.16'
     annotationProcessor 'org.projectlombok:lombok:1.18.16'
+    implementation 'androidx.lifecycle:lifecycle-extensions:2.1.0'
+
 
 }
